fix navigation issue on mobile

--- a/scss/main.css
+++ b/scss/main.css
@@ -1951,7 +1951,7 @@ textarea {
     display: block;
     position: absolute;
     top: 40%;
-    left: 40%;
+    left: 38%;
     border: 0;
     background: none;
     color: #fafafa;
